--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodule"]
 	path = submodule
 	url = ../../tipi-build/unit-test-project-submodule-submodule.git
+[submodule "2ndsubmodule"]
+	path = 2ndsubmodule
+	url = ../../tipi-build/unit-test-project-2ndsubmodule.git
